Force vertical scrollbar to avoid jitter
Force vertical scrollbar to appear on all pages to avoid horizontal
jitter when navigating between long and short pages.

--- a/main.css
+++ b/main.css
@@ -48,6 +48,10 @@ table {
 Theme Styles
 *******************************************************************************/
 
+html {
+    overflow-y: scroll;
+}
+
 body {
   box-sizing: border-box;
   color:#373737;
